# worldforge

./: .gitlab-ci.yml  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md
aur/worldforge/: PKGBUILD
aur/worldforge-bin/: PKGBUILD
src/: agent.rs  chronicle.rs  lib.rs  main.rs  region.rs  settlement.rs  tui.rs  world.rs  worldgen.rs
tests/: agents.rs  chronicle.rs  climate.rs  great_individuals.rs  invariants.rs  mountains.rs  regions.rs  settlements.rs  skills.rs  terrain.rs  wars.rs  world_gen.rs
