[package]
name = "worldforge"
version = "0.1.0"
edition = "2024"
description = "A world simulation engine. Simple rules, emergent civilizations, and a narrative that writes itself."
license = "GPL-3.0-or-later"
repository = "https://git.skylantix.com/hermes/worldforge"
homepage = "https://git.skylantix.com/hermes/worldforge"
keywords = ["simulation", "world", "generative", "agents", "narrative"]

[dependencies]
noise = "0.9"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
